--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -9,7 +9,7 @@
 
   <script src="{% static "vendor/openlayers/ol-debug.js" %}" type="text/javascript"></script>
   <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-
+  <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 
