--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -17,7 +17,7 @@
 
     {# map #}
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
-    <!-- <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script> -->
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
