--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -7,7 +7,18 @@
 {% block breadcrumb_inner %}
 <li><a href="/global/">Global</a></li>
 <li><a href="/global/">Charts</a></li>
+{% endblock %}
 
+{% block subnav_inner %}
+    <li role="presentation"><a href="../map/">
+        <i class="lm lm-map-marker"></i> {% trans "Map" %}
+    </a></li>
+    <li role="presentation"><a href="../data/">
+        <i class="lm lm-table"></i> {% trans "Data" %}
+    </a></li>
+    <li role="presentation" class="active"><span>
+        <i class="lm lm-bar-chart"></i> {% trans "Charts" %}
+    </span></li>
 {% endblock %}
 
 {% block content %}
