--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -693,6 +693,7 @@ form >.in {
     vertical-align: middle;
 }
 
+.subnav.nav > li > span,
 .subnav.nav > li > a {
     padding: 2px 5px;
     border-radius: 5px;
@@ -707,21 +708,19 @@ form >.in {
     overflow: hidden;
 }
 
-.subnav.nav > .active a,
 .subnav.nav > li:hover a,
 .subnav.nav > li:focus a,
 .subnav.nav > .active a {
     color: #4a4a4a;
 }
 
-.subnav.nav > .active .thumbnail,
 .subnav.nav > li:hover .thumbnail,
 .subnav.nav > li:focus .thumbnail,
 .subnav.nav > .active .thumbnail {
     opacity: 1;
 }
 
-.subnav-active > a {
+.subnav.nav > .active > span {
     color: #fcfcfc;
     background-color: #4a4a4a;
     border-radius: 5px;
@@ -1848,8 +1847,12 @@ ul.legend.offset li > span {
 }
 
 .breadcrumb > li,
-.breadcrumb > li > a  {
+.breadcrumb > li > a {
     text-shadow: none !important;
+}
+
+.breadcrumb > li > a {
+    text-decoration: underline;
 }
 
 /* ==========================================================================
