--- a/templates/base.html
+++ b/templates/base.html
@@ -263,8 +263,11 @@
                     </ul>
                 </div>
             </div>
-
-            <hr/>
+            <div class="row">
+                <div class="col-md-12">
+                    <hr/>
+                </div>
+            </div>
 
             <div id="footer-etc" class="row">
                 <div class="col-md-5">
