--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block page_title %}User login{% endblock %}
-{% block title %}User login{% endblock %}
+{% block page_title %}{% trans "Login" %}{% endblock %}
+{% block title %}{% trans "Login" %}{% endblock %}
+{% block breadcrumb_inner %}
+<li>{% trans "Login" %}</li>
+{% endblock %}
 
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p>{% trans "Your username and password didn't match. Please try again." %}</p>
 {% endif %}
 
 {% if next %}
@@ -18,21 +22,21 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+<form class="form-horizontal" method="post" action="{% url 'login' %}">{% csrf_token %}
+    <input type="hidden" name="next" value="{{ next }}" />
+    <div class="form-group">
+        <div class="col-sm-3">{{ form.username.label_tag }}</div>
+        <div class="col-sm-3">{{ form.username }}</div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-3">{{ form.password.label_tag }}</div>
+        <div class="col-sm-3">{{ form.password }}</div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-3 col-sm-offset-3">
+            <input class="btn btn-default" type="submit" value="{% trans "Login" %}" />
+        </div>
+    </div>
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
