CSS Cleanup: Subnavs

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -30,6 +30,7 @@
     <li role="presentation"><a href="../charts/">
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </a></li>
+    <li class="divider"></li>
 {% endblock %}
 
 {% block content %}
