--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -33,6 +33,7 @@
     <li role="presentation"><a href="../charts/">
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </a></li>
+    <li class="divider"></li>
 {% endblock %}
 
 {% block content %}
